# SynonymDetection

./: MANIFEST.in  README.md  setup.cfg  setup.py
synonymdetection/: iksimilarity.py  modelevaluation.py
