[metadata]
name = synonymdetection-mgoldeisc
version = 0.0.1
author = Michael Golden
author_email = mgolden@intersystems.com
description = This package implements the Python code necessary to train and use gensim models for iFind synonym detection in InterSystems IRIS 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgoldenisc/SynonymDetection
project_urls =
    Bug Tracker = https://github.com/mgoldenisc/SynonymDetection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

