[metadata]
name = synonymdetection-mgoldenisc
version = 1.0.0
author = Michael Golden
author_email = mgolden@intersystems.com
description = This package implements the Python code necessary to train and use gensim models for iFind synonym detection in InterSystems IRIS 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgoldenisc/SynonymDetection
project_urls =
    Bug Tracker = https://github.com/mgoldenisc/SynonymDetection/issues
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX

[options]
packages = synonymdetection
python_requires = >=3.6
install_requires = 
    gensim>=4.0.0
